Try again to make CSV render well on GH

--- a/Visualization.ipynb
+++ b/Visualization.ipynb
@@ -44,7 +44,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df=pd.read_csv('Triangle_Atlas.csv', skiprows=2)\n",
+    "df=pd.read_csv('Triangle_Atlas.csv')\n",
     "\n",
     "# replace NaN with string 'None' (for labels)\n",
     "df.fillna(value='None', inplace=True)\n",
