Label axes/origin and rescale

--- a/Visualization.ipynb
+++ b/Visualization.ipynb
@@ -123,11 +123,16 @@
     "                    color='Color', color_discrete_map='identity',\n",
     "                    symbol='Marker',\n",
     "                    symbol_map='identity',\n",
-    "                    title='The Triangle',\n",
+    "                    title='The Triangle<br><sup>Coordinate Origin: Sol System</sup>',\n",
     "                    hover_data=['Name','Affiliation','Imports','Exports','X','Y','Z'],\n",
     "                    width=1200, height=800\n",
     "                   )\n",
     "\n",
+    "fig.update_layout(scene = dict(\n",
+    "                  xaxis_title='pc (spinward)',\n",
+    "                  yaxis_title='pc (coreward)',\n",
+    "                  zaxis_title='pc (galactic axis)',\n",
+    "                  aspectmode='data'))\n",
     "fig.show()\n"
    ]
   }
