Add better commentary

--- a/Visualization.ipynb
+++ b/Visualization.ipynb
@@ -34,9 +34,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7b88b3f5-51f7-4771-b452-0aa43bbedb9f",
+   "metadata": {},
+   "source": [
+    "### Import the data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b94b0ae3-922b-4a27-be1b-a8abc6681cd1",
+   "id": "02a9f59d-9673-4f45-8984-eecb41de154c",
    "metadata": {
     "tags": []
    },
@@ -44,16 +52,52 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df=pd.read_csv('Triangle_Atlas.csv')\n",
-    "\n",
+    "df=pd.read_csv('Triangle_Atlas.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c85dbe2-eea9-4769-b9a8-a69feded0e24",
+   "metadata": {},
+   "source": [
+    "### Tweak it so it's more useful to us"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1084bba-3749-4748-ad9c-1e180bab376c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "# replace NaN with string 'None' (for labels)\n",
     "df.fillna(value='None', inplace=True)\n",
     "\n",
     "df['Y']= -df['Y']  # They're all south\n",
     "# So dot notation works\n",
-    "df.rename(columns={\"Import Index\": \"Imports\", \"Export Index\": \"Exports\"}, inplace=True) \n",
-    "\n",
-    "# Create derived columns\n",
+    "df.rename(columns={\"Import Index\": \"Imports\", \"Export Index\": \"Exports\"}, inplace=True) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3b830b9-2537-41f8-bb17-96f9186f8460",
+   "metadata": {},
+   "source": [
+    "### Create derived columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9821477b-3a59-4c18-88d7-416d4c58eedb",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Symbol index:\n",
     "\n",
     "# UFP: blue circle\n",
     "# Klingon: red square\n",
@@ -93,8 +137,26 @@
     "    anno = f\"{r.Name}: {r.Affiliation}\\n\"\n",
     "    anno += f\"Imports: {i}\\n\"\n",
     "    anno += f\"Exports: {e}\"\n",
-    "    an.append(anno)\n",
-    "    \n",
+    "    an.append(anno)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be5e90e7-f3b1-4866-9a17-ba262b5cb3fb",
+   "metadata": {},
+   "source": [
+    "### Append the columns to the right edge of the dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5d2a812-ae6f-4826-a294-a0918643e107",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "df.insert(len(df.columns), 'Marker', ms)\n",
     "df.insert(len(df.columns), 'Color', cs)\n",
     "df.insert(len(df.columns), 'Annotation', an)"
@@ -128,6 +190,7 @@
     "                    width=1200, height=800\n",
     "                   )\n",
     "\n",
+    "# Add the axis titles and set the aspect mode to reflect the range\n",
     "fig.update_layout(scene = dict(\n",
     "                  xaxis_title='pc (spinward)',\n",
     "                  yaxis_title='pc (coreward)',\n",
@@ -153,7 +216,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
