Add inter-system distance generation

--- a/Visualization.ipynb
+++ b/Visualization.ipynb
@@ -50,9 +50,23 @@
    },
    "outputs": [],
    "source": [
+    "import csv\n",
+    "import json\n",
+    "import math\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
+    "import tempfile\n",
     "\n",
-    "df=pd.read_csv('Triangle_Atlas.csv')"
+    "from pathlib import Path\n",
+    "\n",
+    "# Fix smart quotes\n",
+    "\n",
+    "text=Path(\"Triangle_Atlas.csv\").read_text()\n",
+    "text.replace(\"\\u2019\",\"'\")\n",
+    "with tempfile.TemporaryDirectory() as td:\n",
+    "    csv_file=(Path(td) / \"this.csv\")\n",
+    "    csv_file.write_text(text)\n",
+    "    df=pd.read_csv(csv_file)"
    ]
   },
   {
@@ -77,7 +91,7 @@
     "\n",
     "df['Y']= -df['Y']  # They're all south\n",
     "# So dot notation works\n",
-    "df.rename(columns={\"Import Index\": \"Imports\", \"Export Index\": \"Exports\"}, inplace=True) "
+    "df.rename(columns={\"Import Index\": \"Imports\", \"Export Index\": \"Exports\"}, inplace=True)"
    ]
   },
   {
@@ -175,6 +189,10 @@
    "execution_count": null,
    "id": "14a7a61d-9215-4592-99a9-fccda3fec662",
    "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
     "tags": []
    },
    "outputs": [],
@@ -198,6 +216,165 @@
     "                  aspectmode='data'))\n",
     "fig.show()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff817c5d-eaeb-4fd1-b627-8c79d067945d",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-02-12T17:43:46.493752Z",
+     "iopub.status.busy": "2026-02-12T17:43:46.493403Z",
+     "iopub.status.idle": "2026-02-12T17:43:46.498013Z",
+     "shell.execute_reply": "2026-02-12T17:43:46.496747Z",
+     "shell.execute_reply.started": "2026-02-12T17:43:46.493724Z"
+    }
+   },
+   "source": [
+    "## Construct distance map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc52564d-77dd-49b4-93a1-f12ad768b3c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dist_dict: dict[str,dict[str,float]] = {}\n",
+    "\n",
+    "locs=df.get([\"Name\", \"X\", \"Y\", \"Z\"])\n",
+    "recs=locs.to_records(column_dtypes={\"X\": \"float\", \"Y\": \"float\", \"Z\": \"float\"})\n",
+    "max_recnum=len(recs) - 1\n",
+    "for rec in recs:\n",
+    "    idx=rec[0]\n",
+    "    src_name=rec[1]\n",
+    "    src_x=rec[2]\n",
+    "    src_y=rec[3]\n",
+    "    src_z=rec[4]\n",
+    "    if src_name not in dist_dict:\n",
+    "        dist_dict[src_name] = {}\n",
+    "    dist_dict[src_name][src_name] = 0\n",
+    "    if idx < max_recnum:\n",
+    "        for cmp_idx in range(idx+1,len(df)):\n",
+    "            cmp_rec = recs[cmp_idx]\n",
+    "            cmp_name=cmp_rec[1]\n",
+    "            dst_x=cmp_rec[2]\n",
+    "            dst_y=cmp_rec[3]\n",
+    "            dst_z=cmp_rec[4]\n",
+    "            dx = src_x - dst_x\n",
+    "            dy = src_y - dst_y\n",
+    "            dz = src_z - dst_z\n",
+    "            distance = math.sqrt( dx*dx + dy*dy + dz*dz )\n",
+    "            if cmp_name not in dist_dict:\n",
+    "                dist_dict[cmp_name] = {}\n",
+    "            dist_dict[src_name][cmp_name] = distance\n",
+    "            dist_dict[cmp_name][src_name] = distance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2008e5cc-b50f-4791-ad5d-2547cb3ecfa5",
+   "metadata": {},
+   "source": [
+    "## Convert dict to list for CSV Export"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb3ecf83-d21c-41c4-9040-53860e2c0596",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-02-12T19:35:16.582723Z",
+     "iopub.status.busy": "2026-02-12T19:35:16.582442Z",
+     "iopub.status.idle": "2026-02-12T19:35:16.607751Z",
+     "shell.execute_reply": "2026-02-12T19:35:16.606498Z",
+     "shell.execute_reply.started": "2026-02-12T19:35:16.582699Z"
+    }
+   },
+   "source": [
+    "### Build square array with room for labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34680f25-6cb3-49f3-b46f-637e14ad517f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dist_list: list[list[str|float]] = []\n",
+    "names=sorted(list(dist_dict.keys()))\n",
+    "for i in range(len(names) + 1):\n",
+    "    dist_list.append([])\n",
+    "for i in range(len(names) + 1):\n",
+    "    for j in range(len(names) + 1):\n",
+    "        dist_list[i].append(-1.0)  \n",
+    "dist_list[0][0]=\"Distance\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8e76dd7-1038-451e-b621-f5ebfecc4b2b",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-02-12T19:35:16.582723Z",
+     "iopub.status.busy": "2026-02-12T19:35:16.582442Z",
+     "iopub.status.idle": "2026-02-12T19:35:16.607751Z",
+     "shell.execute_reply": "2026-02-12T19:35:16.606498Z",
+     "shell.execute_reply.started": "2026-02-12T19:35:16.582699Z"
+    }
+   },
+   "source": [
+    "### Fill in data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5fd5ddb3-efbf-4bb9-90d7-ce3ab102d2ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for idx, n in enumerate(names):\n",
+    "    # Row and Column label is system name\n",
+    "    dist_list[0][idx+1] = n\n",
+    "    dist_list[idx+1][0] = n\n",
+    "    dist_list[idx+1][idx+1] = 0  # Diagonal is zero\n",
+    "    for inner_idx in range(idx+1,len(names)):\n",
+    "        inner_n=names[inner_idx]\n",
+    "        distance = dist_dict[n][inner_n]\n",
+    "        trunc_dist=\"{0:.2f}\".format(distance)\n",
+    "        dist_list[idx+1][inner_idx+1] = trunc_dist\n",
+    "        dist_list[inner_idx+1][idx+1] = trunc_dist"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a46a400a-db16-48f1-939b-7d2e745d45cd",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-02-12T19:35:16.582723Z",
+     "iopub.status.busy": "2026-02-12T19:35:16.582442Z",
+     "iopub.status.idle": "2026-02-12T19:35:16.607751Z",
+     "shell.execute_reply": "2026-02-12T19:35:16.606498Z",
+     "shell.execute_reply.started": "2026-02-12T19:35:16.582699Z"
+    }
+   },
+   "source": [
+    "### Write output CSV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ed597ed-2c77-4c4d-a559-0168fda9ad0c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"Distances.csv\", \"w\", newline=\"\") as f:\n",
+    "    writer = csv.writer(f)\n",
+    "    writer.writerows(dist_list)"
+   ]
   }
  ],
  "metadata": {
@@ -216,7 +393,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
