--- a/Visualization.ipynb
+++ b/Visualization.ipynb
@@ -18,6 +18,34 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7b88b3f5-51f7-4771-b452-0aa43bbedb9f",
+   "metadata": {},
+   "source": [
+    "## Imports"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61668ee1-0be7-435d-9012-7a0f595a0f74",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "import json\n",
+    "import math\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import plotly.express as px\n",
+    "import tempfile\n",
+    "\n",
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "836a6d2c-155a-42be-89bb-18fc878c1249",
    "metadata": {
     "execution": {
@@ -34,11 +62,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "7b88b3f5-51f7-4771-b452-0aa43bbedb9f",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58c75197-b437-45f1-9305-9dccaa8c60cb",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
-    "### Import the data"
+    "### Fix smart quotes and ingest data"
    ]
   },
   {
@@ -50,17 +82,6 @@
    },
    "outputs": [],
    "source": [
-    "import csv\n",
-    "import json\n",
-    "import math\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import tempfile\n",
-    "\n",
-    "from pathlib import Path\n",
-    "\n",
-    "# Fix smart quotes\n",
-    "\n",
     "text=Path(\"Triangle_Atlas.csv\").read_text()\n",
     "text.replace(\"\\u2019\",\"'\")\n",
     "with tempfile.TemporaryDirectory() as td:\n",
@@ -174,47 +195,6 @@
     "df.insert(len(df.columns), 'Marker', ms)\n",
     "df.insert(len(df.columns), 'Color', cs)\n",
     "df.insert(len(df.columns), 'Annotation', an)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ded40876-ae5c-4e6d-8c87-79ed6b67f04c",
-   "metadata": {},
-   "source": [
-    "## Plot the data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "14a7a61d-9215-4592-99a9-fccda3fec662",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "import plotly.express as px\n",
-    "\n",
-    "fig = px.scatter_3d(data_frame=df, x='X', y='Y', z='Z',\n",
-    "                    color='Color', color_discrete_map='identity',\n",
-    "                    symbol='Marker',\n",
-    "                    symbol_map='identity',\n",
-    "                    title='The Triangle<br><sup>Coordinate Origin: Sol System</sup>',\n",
-    "                    hover_data=['Name','Affiliation','Imports','Exports','X','Y','Z'],\n",
-    "                    width=1200, height=800\n",
-    "                   )\n",
-    "\n",
-    "# Add the axis titles and set the aspect mode to reflect the range\n",
-    "fig.update_layout(scene = dict(\n",
-    "                  xaxis_title='pc (spinward)',\n",
-    "                  yaxis_title='pc (coreward)',\n",
-    "                  zaxis_title='pc (galactic axis)',\n",
-    "                  aspectmode='data'))\n",
-    "fig.show()\n"
    ]
   },
   {
@@ -374,6 +354,45 @@
     "with open(\"Distances.csv\", \"w\", newline=\"\") as f:\n",
     "    writer = csv.writer(f)\n",
     "    writer.writerows(dist_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ded40876-ae5c-4e6d-8c87-79ed6b67f04c",
+   "metadata": {},
+   "source": [
+    "## Plot the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14a7a61d-9215-4592-99a9-fccda3fec662",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fig = px.scatter_3d(data_frame=df, x='X', y='Y', z='Z',\n",
+    "                    color='Color', color_discrete_map='identity',\n",
+    "                    symbol='Marker',\n",
+    "                    symbol_map='identity',\n",
+    "                    title='The Triangle<br><sup>Coordinate Origin: Sol System</sup>',\n",
+    "                    hover_data=['Name','Affiliation','Imports','Exports','X','Y','Z'],\n",
+    "                    width=1200, height=800\n",
+    "                   )\n",
+    "\n",
+    "# Add the axis titles and set the aspect mode to reflect the range\n",
+    "fig.update_layout(scene = dict(\n",
+    "                  xaxis_title='pc (spinward)',\n",
+    "                  yaxis_title='pc (coreward)',\n",
+    "                  zaxis_title='pc (galactic axis)',\n",
+    "                  aspectmode='data'))\n",
+    "fig.show()\n"
    ]
   }
  ],
